config/vehicle-api/vehicle-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-db
  labels:
    app.kubernetes.io/part-of: vehicle-db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: vehicle-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: vehicle-db
    spec:
      containers:
      - image: postgres:14-alpine
        name: postgres
        ports:
        - containerPort: 5432
          name: vehicle-db
        volumeMounts:
        - name: vehicle-db
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: vehicle-db
        persistentVolumeClaim:
          claimName: vehicle-db
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle-db
  labels:
    app.kubernetes.io/part-of: vehicle-db
spec:
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/part-of: vehicle-db
